# pseudo-cd

./: Cargo.toml  README.md
src/: cli.rs  lib.rs  main.rs  minfo.rs  playback.rs  tui.rs
