[package]
name = "pseudo-cd"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
cpal = "0.15.3"
anyhow = "1.0.86"
ratatui = { version = "0.27.1-alpha.1", features = ["termion", "crossterm"] }
regex = "1.10.5"
once_cell = "1.19.0"
yeet-ops = "1.0.0"
signal-hook = "0.3.17"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"