[package]
name = "pseudo-cd-player"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
cpal = "0.15.3"
anyhow = "1.0.86"
ratatui = { version = "0.27.1-alpha.1", features = ["crossterm"] }
regex = "1.10.5"
once_cell = "1.19.0"
yeet-ops = "1.0.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
rand = "0.8.5"
byteorder = "1.5.0"
log = "0.4.22"
fern = "0.6.2"
humantime = "2.1.0"

[target.'cfg(windows)'.dependencies]
signal-hook = "0.3.17"